--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "predeploy": "npm run build",
