--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-favicon": "0.0.14",
     "react-meta-tags": "^0.7.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-social-icons": "^4.1.0",
     "styled-components": "^3.4.10"
   },
   "scripts": {
