--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-favicon": "0.0.14",
+    "react-ga": "^2.5.7",
     "react-meta-tags": "^0.7.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
