--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-favicon": "0.0.14",
     "react-ga": "^2.5.7",
     "react-meta-tags": "^0.7.3",
+    "react-pdf": "^4.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-social-icons": "^4.1.0",
