--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-dom": "^16.4.1",
     "react-favicon": "0.0.14",
     "react-ga": "^2.5.7",
+    "react-helmet": "^5.2.1",
+    "react-highlight": "^0.12.0",
     "react-meta-tags": "^0.7.3",
     "react-pdf": "^4.0.2",
     "react-router-dom": "^4.3.1",
