--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@u-wave/react-vimeo": "^0.6.0",
     "react": "^16.4.1",
     "react-code-snippet": "^0.6.13",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.13.1",
     "react-favicon": "0.0.14",
     "react-ga": "^2.5.7",
     "react-helmet": "^5.2.1",
@@ -14,7 +14,7 @@
     "react-meta-tags": "^0.7.3",
     "react-pdf": "^4.0.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^3.4.1",
     "react-social-icons": "^4.1.0",
     "styled-components": "^3.4.10"
   },
