--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     {
       "source": "/li",
       "destination": "https://linkedin.com/in/danielcolinjames",
-      "perman": false
+      "permanent": false
     },
     {
       "source": "/brave",
